# rust-incubator

./: README.md
1_concepts/1_1_default_clone_copy/src/: main.rs
1_concepts/1_2_box_pin/: Cargo.toml
1_concepts/1_2_box_pin/src/: future.rs  lib.rs  main.rs  mute_me_somehow.rs  say_hi.rs
1_concepts/1_3_rc_cell/src/: main.rs
1_concepts/1_4_cow/src/: main.rs
1_concepts/1_5_convert_cast_deref/: Cargo.toml
1_concepts/1_5_convert_cast_deref/src/: email_string.rs  random.rs
1_concepts/1_6_dispatch/src/: dynamic_repo.rs  lib.rs  static_repo.rs
1_concepts/1_7_sized/src/: command.rs  lib.rs  repo.rs
1_concepts/1_8_thread_safety/src/: main.rs
1_concepts/1_9_phantom/src/: main.rs
1_concepts/src/: concurrent_linked_list.rs  lib.rs  linked_list.rs
2_idioms/2_1_type_safety/src/: lib.rs  main.rs
2_idioms/2_2_mem_replace/src/: main.rs
2_idioms/2_3_bound_impl/src/: main.rs
2_idioms/2_4_generic_in_type_out/src/: main.rs
2_idioms/2_5_exhaustivity/src/: lib.rs
2_idioms/2_6_sealing/src/: lib.rs  my_error.rs  my_iterator_ext.rs
2_idioms/src/: lib.rs  money.rs  product.rs
3_ecosystem/: Cargo.toml
3_ecosystem/3_10_threads/: Cargo.toml
3_ecosystem/3_10_threads/src/: main.rs
3_ecosystem/3_11_async/: Cargo.toml
3_ecosystem/3_11_async/src/: lib.rs  main.rs
3_ecosystem/3_1_testing/: Cargo.toml
3_ecosystem/3_1_testing/src/: lib.rs  main.rs
3_ecosystem/3_1_testing/tests/: cucumber.rs  test.rs
3_ecosystem/3_1_testing/tests/features/: guess
3_ecosystem/3_2_macro/: Cargo.toml
3_ecosystem/3_2_macro/procedural/: Cargo.toml
3_ecosystem/3_2_macro/procedural/src/: lib.rs
3_ecosystem/3_2_macro/src/: declarative.rs  lib.rs
3_ecosystem/3_3_date_time/: Cargo.toml
3_ecosystem/3_3_date_time/src/: main.rs
3_ecosystem/3_4_regex_parsing/: Cargo.toml
3_ecosystem/3_4_regex_parsing/src/: lib.rs  pest.rs  regex.rs
3_ecosystem/3_5_collections/src/: lib.rs
3_ecosystem/3_6_serde/: Cargo.toml
3_ecosystem/3_6_serde/src/: lib.rs  main.rs
3_ecosystem/3_7_rand_crypto/: Cargo.toml
3_ecosystem/3_7_rand_crypto/src/: lib.rs
3_ecosystem/3_8_log/: Cargo.toml
3_ecosystem/3_8_log/src/: lib.rs  main.rs
3_ecosystem/3_9_cmd_env_conf/: Cargo.toml
3_ecosystem/3_9_cmd_env_conf/src/: config.rs  main.rs
3_ecosystem/src/: lib.rs  main.rs
4_backend/: Cargo.toml
4_backend/4_1_db/: Cargo.toml
4_backend/4_1_db/src/: lib.rs  main.rs
4_backend/4_2_http/: Cargo.toml
4_backend/4_2_http/src/: db_thin_client.rs  lib.rs  web.rs
4_backend/4_3_api/: Cargo.toml
4_backend/4_3_api/src/: db.rs  db_thin_client.rs  lib.rs  web.rs
4_backend/src/: db.rs  graphql.rs  lib.rs  main.rs  web.rs
