[package]
name = "step_4"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0.76"
async-graphql = "6.0.11"
async-graphql-axum = "6.0.11"
# axum = "0.7.2"
axum = "0.6.20"
env_logger = "0.10.1"
futures = "0.3.29"
log = "0.4.20"
rand = "0.8.5"
# serde = { version = "1.0.193", features = ["derive"] }
sqlx = { version = "0.7.3", features = ["sqlite", "runtime-tokio"] }
tokio = { version = "1.35.1", features = ["full"] }
tower-http = "0.5.0"
