[package]
name = "step_3_6"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
humantime-serde = "1.1.1"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
serde_yaml = "0.9.27"
time = { version = "0.3.30", features = ["serde", "serde-human-readable"] }
toml = "0.8.8"
uuid = { version = "1.6.1", features = ["serde"] }
