[package]
name = "step_4_2"
version = "0.1.0"
edition = "2021"
publish = false
default-run = "server"

[dependencies]
axum = "0.7.2"
anyhow = "1.0.75"
clap = { version = "4.4.11", features = ["derive", "env"] }
futures = "0.3.29"
sqlx = { version = "0.7.3", features = ["sqlite", "runtime-tokio"] }
tokio = { version = "1.35.1", features = ["full"] }
serde = { version = "1.0.193", features = ["derive"] }
reqwest = { version = "0.11.23", features = ["json"] }
log = "0.4.20"
env_logger = "0.10.1"
utoipa-swagger-ui = { version = "5.0.0", features = ["axum"] }
utoipa = { version = "4.1.0", features = ["axum_extras"] }
